// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should discard changes 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-426 makeStyles-box-423"
    >
      <div
        class="makeStyles-formContainer-425 "
      >
        <div
          class="makeStyles-formContainerWrapper-424"
        >
          <div
            class="makeStyles-currentPasswordSpacing-393"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-435 makeStyles-loginLabels-433 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-434 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-432 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-429 makeStyles-inactiveIcon-429"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-437 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-438"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-435 makeStyles-loginLabels-433 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-434 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-432 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-429 makeStyles-inactiveIcon-429"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-437 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-438"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-444 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-435 makeStyles-loginLabels-433 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-434 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-432 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-429 makeStyles-inactiveIcon-429"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-437 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-438"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-387 makeStyles-passwordButtonWrapper-388"
        >
          <span
            class="makeStyles-noOutline-413"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-415 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-414 makeStyles-noPadding-411  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-450"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-51 makeStyles-box-48"
    >
      <div
        class="makeStyles-formContainer-50 "
      >
        <div
          class="makeStyles-formContainerWrapper-49"
        >
          <div
            class="makeStyles-currentPasswordSpacing-18"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-60 makeStyles-loginLabels-58 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-59 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-57 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-54 makeStyles-inactiveIcon-54"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-62 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-63"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-60 makeStyles-loginLabels-58 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-59 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-57 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-54 makeStyles-inactiveIcon-54"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-62 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-63"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-69 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-60 makeStyles-loginLabels-58 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-59 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-57 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-54 makeStyles-inactiveIcon-54"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-62 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-63"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-12 makeStyles-passwordButtonWrapper-13"
        >
          <span
            class="makeStyles-noOutline-38"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-40 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-39 makeStyles-noPadding-36  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-75"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render current password error 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-276 makeStyles-box-273"
    >
      <div
        class="makeStyles-formContainer-275 "
      >
        <div
          class="makeStyles-formContainerWrapper-274"
        >
          <div
            class="makeStyles-currentPasswordSpacing-243"
          >
            <div
              class="makeStyles-errorSettingsResponse-232 makeStyles-errorSettingsResponseMarginBottom-233"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Incorrect Current Password
              </p>
            </div>
            <div
              class="MuiFormControl-root makeStyles-formControl-285 makeStyles-loginLabels-283 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-284 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-282 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-279 makeStyles-inactiveIcon-279"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-287 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-288"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-285 makeStyles-loginLabels-283 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-284 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-282 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-279 makeStyles-inactiveIcon-279"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-287 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-288"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-294 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-285 makeStyles-loginLabels-283 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-284 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-282 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-279 makeStyles-inactiveIcon-279"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-287 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-288"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-237 makeStyles-passwordButtonWrapper-238"
        >
          <span
            class="makeStyles-noOutline-263"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-265 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-264 makeStyles-noPadding-261  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-300"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render loading 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-126 makeStyles-box-123"
    >
      <div
        class="makeStyles-formContainer-125 "
      >
        <div
          class="makeStyles-formContainerWrapper-124"
        >
          <div
            class="makeStyles-currentPasswordSpacing-93"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-135 makeStyles-loginLabels-133 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-134 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-132 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-129 makeStyles-inactiveIcon-129"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-137 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-138"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-135 makeStyles-loginLabels-133 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-134 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-132 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-129 makeStyles-inactiveIcon-129"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-137 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-138"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-144 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-135 makeStyles-loginLabels-133 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-134 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-132 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-129 makeStyles-inactiveIcon-129"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-137 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-138"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-87 makeStyles-passwordButtonWrapper-88"
        >
          <span
            class="makeStyles-noOutline-113"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-115 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-loading-148 makeStyles-nextButton-114 makeStyles-noPadding-111 makeStyles-changePasswordButton-77 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-spinnerWrapper-149"
                  data-testid="button-spinner"
                >
                  <svg
                    class="indicator_4oezz7"
                    height="23.2"
                    width="23.2"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      stroke="rgba(0, 0, 0, 0.3843137254901961)"
                      stroke-linecap="round"
                      stroke-width="2.3"
                      transform="translate(11.6, 11.6)"
                    >
                      <line
                        style="opacity: 1;"
                        transform="rotate(0)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.8860544217687075;"
                        transform="rotate(-30)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.7721088435374149;"
                        transform="rotate(-60)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.6581632653061225;"
                        transform="rotate(-90)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.5442176870748299;"
                        transform="rotate(-120)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.4302721088435374;"
                        transform="rotate(-150)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-180)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-210)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-240)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-270)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-300)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                      <line
                        style="opacity: 0.3163265306122449;"
                        transform="rotate(-330)"
                        x1="0"
                        x2="0"
                        y1="6.6"
                        y2="9.6"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="makeStyles-textWrapper-150"
                >
                  Saving...
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render with enabled inputs 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-201 makeStyles-box-198"
    >
      <div
        class="makeStyles-formContainer-200 "
      >
        <div
          class="makeStyles-formContainerWrapper-199"
        >
          <div
            class="makeStyles-currentPasswordSpacing-168"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-210 makeStyles-loginLabels-208 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-209 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-207 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-204 makeStyles-inactiveIcon-204"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-213"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-210 makeStyles-loginLabels-208 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-209 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-207 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-204 makeStyles-inactiveIcon-204"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-213"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-219 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-210 makeStyles-loginLabels-208 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-209 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-207 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-204 makeStyles-inactiveIcon-204"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-212 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-213"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-162 makeStyles-passwordButtonWrapper-163"
        >
          <span
            class="makeStyles-noOutline-188"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-190 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class="makeStyles-noOutline-188"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-189 makeStyles-noPadding-186  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-225"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should show error validations 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-351 makeStyles-box-348"
    >
      <div
        class="makeStyles-formContainer-350 "
      >
        <div
          class="makeStyles-formContainerWrapper-349"
        >
          <div
            class="makeStyles-currentPasswordSpacing-318"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-360 makeStyles-loginLabels-358 "
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Current Password
                 
              </h1>
              <div
                data-testid="confirm-password-wrapper"
              >
                <div
                  aria-describedby="confirm-password-password"
                  class="MuiFormControl-root MuiTextField-root makeStyles-textField-359 MuiFormControl-fullWidth"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                  >
                    <div
                      class="MuiInputAdornment-root     makeStyles-loginIcons-357 MuiInputAdornment-positionStart"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                      data-testid="current-password"
                      name="currentPassword"
                      placeholder="Current Password"
                      required=""
                      type="password"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        aria-label="toggle-visibility"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                        data-testid="toggle-visibility-button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            class=" makeStyles-inactiveIcon-354 makeStyles-inactiveIcon-354"
                          >
                            visibility-off.svg
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-362 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-363"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root makeStyles-formControl-360 makeStyles-loginLabels-358 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-359 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-357 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="password"
                    name="newPassword"
                    placeholder="New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-354 makeStyles-inactiveIcon-354"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-362 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-363"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root makeStyles-inputSubtitle-369 MuiTypography-body1"
          >
            Password must have at least 8 characters, one lowercase letter, one uppercase letter, one number and one symbol.
          </p>
          <div
            class="MuiFormControl-root makeStyles-formControl-360 makeStyles-loginLabels-358 "
          >
            <h1
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
            >
              Confirm New Password
               
            </h1>
            <div
              data-testid="confirm-password-wrapper"
            >
              <div
                aria-describedby="confirm-password-password"
                class="MuiFormControl-root MuiTextField-root makeStyles-textField-359 MuiFormControl-fullWidth"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
                >
                  <div
                    class="MuiInputAdornment-root     makeStyles-loginIcons-357 MuiInputAdornment-positionStart"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                    data-testid="confirm-password"
                    name="confirmPassword"
                    placeholder="Confirm New Password"
                    required=""
                    type="password"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                  >
                    <button
                      aria-label="toggle-visibility"
                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
                      data-testid="toggle-visibility-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          class=" makeStyles-inactiveIcon-354 makeStyles-inactiveIcon-354"
                        >
                          visibility-off.svg
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-362 MuiOutlinedInput-notchedOutline"
                    style="padding-left: 8px;"
                  >
                    <legend
                      class="PrivateNotchedOutline-legend-363"
                      style="width: 0.01px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-formButtonWrapper-312 makeStyles-passwordButtonWrapper-313"
        >
          <span
            class="makeStyles-noOutline-338"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-340 MuiButton-textPrimary Mui-disabled Mui-disabled"
              data-testid="discard-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Discard Changes
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-339 makeStyles-noPadding-336  MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
              data-testid="next-changes-btn"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="makeStyles-textWrapper-375"
                >
                  Save Changes
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
